// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages fareType should render correctly 1`] = `
<Component
  description="Forgot Password page of the Fares data build tool"
  errors={Array []}
  title="Forgot Password - Fares data build tool"
>
  <div
    className="govuk-grid-row"
  >
    <div
      className="govuk-grid-column-two-thirds"
    >
      <form
        action="/api/forgotPassword"
        method="post"
      >
        <ErrorSummary
          errors={Array []}
        />
        <div
          className="govuk-form-group"
        >
          <div
            aria-describedby="forgot-password-heading"
            className="govuk-fieldset"
          >
            <legend
              className="govuk-fieldset__legend govuk-fieldset__legend--l"
            >
              <h1
                className="govuk-fieldset__heading"
                id="forgot-password-heading"
              >
                Forgot your Password?
              </h1>
            </legend>
            <p
              className="govuk-hint hint-text"
              id="hint-text"
            >
              Enter your email address to reset your password
            </p>
            <label
              className="govuk-label govuk-visually-hidden"
              htmlFor="email"
            >
              Enter email address
            </label>
            <div
              className="govuk-form-group"
            >
              <FormElementWrapper
                errorClass="govuk-input--error"
                errorId="email"
                errors={Array []}
              >
                <input
                  aria-describedby="hint-text"
                  autoComplete="email"
                  className="govuk-input"
                  defaultValue=""
                  id="email"
                  name="email"
                  spellCheck="false"
                  type="text"
                />
              </FormElementWrapper>
            </div>
          </div>
        </div>
        <input
          className="govuk-button"
          id="continue-button"
          name="continue"
          type="submit"
          value="Continue"
        />
      </form>
    </div>
    <div
      className="govuk-grid-column-one-third"
    >
      <p>
        <h1
          className="govuk-heading-s"
        >
          Don't have an account?
        </h1>
        <a
          className="govuk-link"
          href="/register"
        >
          Request Access
        </a>
      </p>
    </div>
  </div>
</Component>
`;

exports[`pages fareType should render error messaging when errors are passed to the page 1`] = `
<Component
  description="Forgot Password page of the Fares data build tool"
  errors={
    Array [
      Object {
        "errorMessage": "Choose a fare type from the options",
        "id": "fare-type-error",
      },
    ]
  }
  title="Forgot Password - Fares data build tool"
>
  <div
    className="govuk-grid-row"
  >
    <div
      className="govuk-grid-column-two-thirds"
    >
      <form
        action="/api/forgotPassword"
        method="post"
      >
        <ErrorSummary
          errors={
            Array [
              Object {
                "errorMessage": "Choose a fare type from the options",
                "id": "fare-type-error",
              },
            ]
          }
        />
        <div
          className="govuk-form-group"
        >
          <div
            aria-describedby="forgot-password-heading"
            className="govuk-fieldset"
          >
            <legend
              className="govuk-fieldset__legend govuk-fieldset__legend--l"
            >
              <h1
                className="govuk-fieldset__heading"
                id="forgot-password-heading"
              >
                Forgot your Password?
              </h1>
            </legend>
            <p
              className="govuk-hint hint-text"
              id="hint-text"
            >
              Enter your email address to reset your password
            </p>
            <label
              className="govuk-label govuk-visually-hidden"
              htmlFor="email"
            >
              Enter email address
            </label>
            <div
              className="govuk-form-group"
            >
              <FormElementWrapper
                errorClass="govuk-input--error"
                errorId="email"
                errors={
                  Array [
                    Object {
                      "errorMessage": "Choose a fare type from the options",
                      "id": "fare-type-error",
                    },
                  ]
                }
              >
                <input
                  aria-describedby="hint-text"
                  autoComplete="email"
                  className="govuk-input"
                  defaultValue=""
                  id="email"
                  name="email"
                  spellCheck="false"
                  type="text"
                />
              </FormElementWrapper>
            </div>
          </div>
        </div>
        <input
          className="govuk-button"
          id="continue-button"
          name="continue"
          type="submit"
          value="Continue"
        />
      </form>
    </div>
    <div
      className="govuk-grid-column-one-third"
    >
      <p>
        <h1
          className="govuk-heading-s"
        >
          Don't have an account?
        </h1>
        <a
          className="govuk-link"
          href="/register"
        >
          Request Access
        </a>
      </p>
    </div>
  </div>
</Component>
`;
